Add App Growth and Premium Roadmap document
- Introduced a comprehensive roadmap outlining strategies for app growth and premium feature monetization.
- Included actionable items with success metrics for each strategy, focusing on user engagement, premium positioning, and retention features.
- Structured the document to facilitate systematic implementation and measurement of impact over time.

--- a/changelogs/2026-02-16.md
+++ b/changelogs/2026-02-16.md
@@ -1,3 +1,381 @@
+🗓 2026-02-16 · 20:08 (GMT+2)
+
+🔹 Request
+
+User asked how to ensure all cards use the same radius and styling consistently.
+
+🔧 Changes Made
+	•	Centralized card corner radius to a single design token: `ViewConstants.cardCornerRadius` (set to `32.0`).
+	•	Updated shared glass card API (`glassCard`) and modifier defaults to use `ViewConstants.cardCornerRadius`.
+	•	Updated shared `AppCardStyle` to use the same token for radius consistency.
+	•	Normalized card usage by removing explicit per-view `cornerRadius` arguments from `.glassCard(...)` call sites so cards inherit the shared default.
+	•	Aligned remaining outlier card usages (including live session and preview usages) with the shared default.
+
+Files modified:
+	•	TrainState/Theme/ViewConstants.swift
+	•	TrainState/Views/Components/LiquidGlass.swift
+	•	TrainState/Theme/AppCardStyle.swift
+	•	Multiple view files using `.glassCard(...)`
+
+✅ Result
+
+Card radius is now controlled from one place, and card corner consistency can be changed app-wide by updating a single token.
+
+⸻
+
+🗓 2026-02-16 · 19:58 (GMT+2)
+
+🔹 Request
+
+User reported recap sharing image was oversized and requested the exported card match the in-app card exactly.
+
+🔧 Changes Made
+	•	Removed fixed large export canvas sizing from recap image rendering.
+	•	Updated share snapshot to use the same visual structure and styling as the in-app `Weekly Recap` card.
+	•	Set share snapshot width to match in-app card width (`screen width - 32`) to align with Analytics horizontal padding.
+	•	Removed extra spacer/footer content that made the previous shared image feel oversized.
+
+Files modified:
+	•	TrainState/Views/AnalyticsView.swift
+
+✅ Result
+
+Shared recap images now closely match the on-screen recap card proportions and appearance.
+
+⸻
+
+🗓 2026-02-16 · 19:49 (GMT+2)
+
+🔹 Request
+
+User requested the shareable recap card use the right aspect ratio and only be as wide as needed.
+
+🔧 Changes Made
+	•	Changed recap image export to a fixed 4:5 canvas (`1080x1350`) for social-friendly proportions.
+	•	Reworked the share snapshot into a bounded card canvas with internal padding instead of wide outer padding.
+	•	Removed extra export background/padding that previously made shared images wider than necessary.
+
+Files modified:
+	•	TrainState/Views/AnalyticsView.swift
+
+✅ Result
+
+Shared recap images now export at a clean 4:5 ratio and no longer include unnecessary extra width.
+
+⸻
+
+🗓 2026-02-16 · 19:42 (GMT+2)
+
+🔹 Request
+
+User requested that premium override can be turned off in a way that disables premium even when premium is currently active.
+
+🔧 Changes Made
+	•	Added a new debug state in `PurchaseManager` (`debugPremiumForceDisabled`) with persisted `UserDefaults` storage.
+	•	Updated `hasActiveSubscription` to return `false` when force-disabled mode is enabled, before checking normal entitlements.
+	•	Added `setPremiumForceDisabled(_:)` API and made debug premium modes mutually exclusive:
+	•	Enabling premium override turns force-disabled off.
+	•	Enabling force-disabled turns premium override off.
+	•	Added a new `Force Premium Off` toggle in `DeveloperOptionsView` with status messaging.
+	•	Updated developer note text to clarify mutual exclusivity.
+
+Files modified:
+	•	TrainState/Managers/PurchaseManager.swift
+	•	TrainState/Views/DeveloperOptionsView.swift
+
+✅ Result
+
+Developer Settings now supports forcing premium OFF for testing, even if StoreKit/RevenueCat currently reports an active premium entitlement.
+
+⸻
+
+🗓 2026-02-16 · 19:36 (GMT+2)
+
+🔹 Request
+
+User requested recap sharing to send the actual visual card (image), not text.
+
+🔧 Changes Made
+	•	Replaced recap text sharing with image-based sharing in `AnalyticsView`.
+	•	Added `ImageRenderer`-based card snapshot generation for the weekly recap hero card.
+	•	Added a `Transferable` PNG payload (`WeeklyRecapShareImage`) so `ShareLink` exports an actual image file.
+	•	Added share preview image handling so the iOS share sheet displays the recap card visually.
+
+Files modified:
+	•	TrainState/Views/AnalyticsView.swift
+
+✅ Result
+
+Tapping share now exports and shares a real weekly recap card image (PNG) instead of plain text.
+
+⸻
+
+🗓 2026-02-16 · 19:31 (GMT+2)
+
+🔹 Request
+
+User requested the ability to turn premium off directly from Developer Settings.
+
+🔧 Changes Made
+	•	Added a dedicated `Turn Premium Override Off` action in `DeveloperOptionsView` when debug premium override is enabled.
+	•	Kept the existing debug premium toggle and clarified behavior with a note explaining that turning override off restores normal entitlement checks.
+	•	Retained current premium-active status messaging for quick verification.
+
+Files modified:
+	•	TrainState/Views/DeveloperOptionsView.swift
+
+✅ Result
+
+Developer Settings now provides an explicit, one-tap way to disable premium override during testing.
+
+⸻
+
+🗓 2026-02-16 · 19:24 (GMT+2)
+
+🔹 Request
+
+User requested a cool shareable recap card and full-width layout for all cards on the Analytics view.
+
+🔧 Changes Made
+	•	Redesigned `Weekly Recap` into a share-focused hero card with gradient styling and higher-contrast typography.
+	•	Added native `ShareLink` action to the recap card for quick sharing of weekly stats.
+	•	Added share-ready metric pills inside the recap card (workouts, minutes, streak).
+	•	Enforced full-width behavior across Analytics cards by explicitly applying `.frame(maxWidth: .infinity, alignment: .leading)` to each card container.
+
+Files modified:
+	•	TrainState/Views/AnalyticsView.swift
+
+✅ Result
+
+The recap now feels more premium and shareable, and all Analytics cards render consistently at full width.
+
+⸻
+
+🗓 2026-02-16 · 19:14 (GMT+2)
+
+🔹 Request
+
+User requested implementation of the retention feature set focused on recurring value (weekly recap, forecasts, guidance, persistent surfaces).
+
+🔧 Changes Made
+	•	Added a new `Weekly Recap` card in `AnalyticsView` with dynamic headline and weekly metric pills (workouts, minutes, streak).
+	•	Extended `Weekly Goals` with forecast outputs for remaining workouts/minutes per day needed to hit this week’s goals.
+	•	Added a `Next Session Guidance` card to provide action-oriented recommendations based on near-PR opportunities, recent training gaps, and weekly goal deficit.
+	•	Added an `Always-On Surfaces` card with status and guidance for HealthKit-linked workouts, reminders, and live session usage.
+	•	Added supporting analytics helpers for recap text, days-left pacing, HealthKit-linked counts, and guidance synthesis.
+	•	Marked section 4 items in `APP_GROWTH_PREMIUM_ROADMAP.md` as completed.
+
+Files modified:
+	•	TrainState/Views/AnalyticsView.swift
+	•	APP_GROWTH_PREMIUM_ROADMAP.md
+
+✅ Result
+
+Analytics now delivers recurring weekly value and concrete next actions, while making retention surfaces and setup status visible in-app.
+
+⸻
+
+🗓 2026-02-16 · 18:58 (GMT+2)
+
+🔹 Request
+
+User requested implementation of step 4 from the roadmap execution order (first-3-day onboarding improvements).
+
+🔧 Changes Made
+	•	Enhanced onboarding final step to collect `Primary Goal` and `Training Style` selections.
+	•	Persisted onboarding selections using `@AppStorage` and mapped selected goals to weekly goal defaults.
+	•	Added starter strength template preloading on onboarding completion when no templates exist, with templates tailored by selected goal.
+	•	Added a `First Session Checklist` card in `WorkoutListView` with status for:
+	•	Log first workout
+	•	Set weekly goal
+	•	Enable reminders
+	•	Added reminder permission request action from checklist and synced permission status on view appearance.
+	•	Marked section 6 items in `APP_GROWTH_PREMIUM_ROADMAP.md` as completed.
+
+Files modified:
+	•	TrainState/Views/OnboardingView.swift
+	•	TrainState/Views/WorkoutListView.swift
+	•	APP_GROWTH_PREMIUM_ROADMAP.md
+
+✅ Result
+
+New users now get personalized onboarding setup, immediate starter templates, and a clear first-session completion path to improve early retention.
+
+⸻
+
+🗓 2026-02-16 · 18:38 (GMT+2)
+
+🔹 Request
+
+User requested that attaching a HealthKit workout to an existing workout should also transfer start time and duration.
+
+🔧 Changes Made
+	•	Updated `HealthKitRecentWorkoutImporter.attachWorkout` to always sync `startDate` and `duration` from the selected HealthKit workout.
+	•	Kept existing behavior for other metrics to fill only missing values (distance, calories, rating) to avoid unnecessary overrides.
+	•	Updated method documentation to reflect the new attach behavior.
+
+Files modified:
+	•	TrainState/Services/HealthKitRecentWorkoutImporter.swift
+
+✅ Result
+
+Attached workouts now inherit HealthKit timing data directly, ensuring the existing workout record matches the source session time and duration.
+
+⸻
+
+🗓 2026-02-16 · 18:31 (GMT+2)
+
+🔹 Request
+
+User requested a further visual upgrade to make the post-log banner feel nicer.
+
+🔧 Changes Made
+	•	Refactored the success banner from a single text line to a structured achievement toast model with title, subtitle, and metrics.
+	•	Added compact metric pills for weekly workout count and streak days.
+	•	Updated iconography to a celebratory symbol and improved typography hierarchy for clearer readability.
+	•	Kept native `safeAreaInset` and material styling while improving information density and polish.
+
+Files modified:
+	•	TrainState/Views/WorkoutListView.swift
+
+✅ Result
+
+Post-log feedback now feels more premium and informative, with clearer visual hierarchy and stronger motivational framing.
+
+⸻
+
+🗓 2026-02-16 · 18:23 (GMT+2)
+
+🔹 Request
+
+User requested a nicer, more native SwiftUI style for the post-log success banner.
+
+🔧 Changes Made
+	•	Replaced the top `overlay` capsule banner in `WorkoutListView` with a `safeAreaInset` presentation for a more native top notice behavior.
+	•	Redesigned banner visuals to use `ultraThinMaterial`, rounded rectangle container, subtle border, and soft shadow.
+	•	Added an icon-led layout and improved text hierarchy for clearer scanability.
+	•	Replaced `DispatchQueue` delay dismissal with a cancellable `Task.sleep` flow to avoid banner timing conflicts on rapid successive saves.
+
+Files modified:
+	•	TrainState/Views/WorkoutListView.swift
+
+✅ Result
+
+Post-log feedback now appears with smoother native motion and system-consistent styling, while remaining stable under rapid updates.
+
+⸻
+
+🗓 2026-02-16 · 18:14 (GMT+2)
+
+🔹 Request
+
+User asked to warn before saving when a workout of the same type already exists on the same day.
+
+🔧 Changes Made
+	•	Added duplicate-detection logic in `AddWorkoutView` for same workout type on the same calendar day.
+	•	Introduced a confirmation alert with `Cancel` and `Save Anyway` actions before persisting duplicate-day entries.
+	•	Updated normal save, quick-log save, and strength-session save flows to use shared guarded save logic.
+	•	Ensured template persistence only happens after duplicate confirmation, not before.
+
+Files modified:
+	•	TrainState/Views/AddWorkoutView.swift
+
+✅ Result
+
+Users now get a warning before creating duplicate same-day workout types, while still having the option to save intentionally.
+
+⸻
+
+🗓 2026-02-16 · 18:02 (GMT+2)
+
+🔹 Request
+
+User asked to start implementing item 1 from the growth roadmap: improve the core habit loop to drive more usage.
+
+🔧 Changes Made
+	•	Added a new one-tap `Quick Log` presets card in `AddWorkoutView` for common sessions (Strength, Run, Cycle, Yoga) to reduce input friction.
+	•	Added a post-log success banner in `WorkoutListView` that surfaces weekly workout count and current day streak after a new workout is logged.
+	•	Extended `NotificationManager` with routine-based reminder scheduling that predicts the next likely workout window from recent workout dates and schedules a one-time consistency nudge.
+	•	Wired reminder refresh into successful workout saves so reminder timing adapts as user behavior changes.
+	•	Marked all checklist items in section 1 of `APP_GROWTH_PREMIUM_ROADMAP.md` as completed.
+
+Files modified:
+	•	TrainState/Views/AddWorkoutView.swift
+	•	TrainState/Views/WorkoutListView.swift
+	•	TrainState/Managers/NotificationManager.swift
+	•	APP_GROWTH_PREMIUM_ROADMAP.md
+
+✅ Result
+
+The app now supports much faster common workout logging, immediate positive feedback after saves, and adaptive reminder nudges aligned to user workout rhythm.
+
+⸻
+
+🗓 2026-02-16 · 17:36 (GMT+2)
+
+🔹 Request
+
+User asked to convert growth and premium optimization recommendations into a Markdown file so implementation can start one item at a time.
+
+🔧 Changes Made
+	•	Created a new roadmap file with prioritized growth and premium initiatives.
+	•	Structured each initiative as a checklist with success metrics for measurable execution.
+	•	Added a recommended execution order to support sequential implementation.
+
+Files modified:
+	•	APP_GROWTH_PREMIUM_ROADMAP.md
+
+✅ Result
+
+The project now has a clear, actionable implementation roadmap for improving user adoption and premium conversion in iterative steps.
+
+⸻
+
+🗓 2026-02-16 · 17:21 (GMT+2)
+
+🔹 Request
+
+User requested the in-app review prompt to happen only once after 3 workouts, with manual review options available elsewhere in the app.
+
+🔧 Changes Made
+	•	Updated review prompt logic to trigger only once after the 3rd successfully saved workout.
+	•	Removed milestone-based repeat prompt retries and cooldown logic.
+	•	Added a persistent “Rate TrainState” card at the bottom of the workouts list view (including empty-state screen).
+	•	Added a “Rate TrainState” action in Settings under Premium.
+	•	Connected both manual actions to the App Store write-review page for app ID `6747159475`.
+
+Files modified:
+	•	TrainState/Views/AddWorkoutView.swift
+	•	TrainState/Views/WorkoutListView.swift
+	•	TrainState/Views/SettingsView.swift
+
+✅ Result
+
+Users get one contextual review prompt at workout #3, then can rate manually anytime from the workouts screen footer or Settings.
+
+⸻
+
+🗓 2026-02-16 · 17:08 (GMT+2)
+
+🔹 Request
+
+User requested App Store review prompting after the 3rd logged workout, with guidance on what to do if they dismiss and do not leave a rating.
+
+🔧 Changes Made
+	•	Added in-app review prompt tracking to `AddWorkoutView` using persisted `@AppStorage` counters.
+	•	Triggered the first review prompt at the 3rd successfully saved workout.
+	•	Implemented retry milestones for later prompts at workout counts 8, 15, and 25.
+	•	Added a 21-day cooldown between prompt attempts to avoid over-prompting if users dismiss.
+
+Files modified:
+	•	TrainState/Views/AddWorkoutView.swift
+
+✅ Result
+
+Review prompting now starts after workout #3 and retries later with spaced, milestone-based attempts when users do not review immediately.
+
+⸻
+
 🗓 2026-02-16 · 16:20 (GMT+2)
 
 🔹 Request
