Refactor workout views and enhance card styling
- Introduced a new `advancedSectionCard` in `AddWorkoutView` and `EditWorkoutView` to manage optional fields more effectively.
- Updated card styling across multiple views to use a consistent elevated glass effect, improving visual clarity and user experience.
- Adjusted padding and spacing in various components for a cleaner layout.
- Implemented unsaved changes alerts in both workout views to enhance user interaction and prevent data loss.
- Refined background gradients and card appearances to ensure better visibility and aesthetic appeal in dark and light modes.

Files modified:
- `AddWorkoutView.swift`
- `EditWorkoutView.swift`
- `WorkoutListView.swift`
- `AppCardStyle.swift`
- `LiquidGlass.swift`
- `WorkoutRowView.swift`

--- a/changelogs/2026-02-16.md
+++ b/changelogs/2026-02-16.md
@@ -1,3 +1,268 @@
+🗓 2026-02-16 · 13:49 (GMT+2)
+
+🔹 Request
+
+User requested that the improved card appearance be the default style for all cards.
+
+🔧 Changes Made
+	•	Promoted elevated glass card styling to the app-wide default:
+	•	Updated `GlassCardModifier` default `prominence` from `regular` to `elevated`.
+	•	Updated `glassCard(...)` extension default `prominence` from `regular` to `elevated`.
+	•	This makes existing `.glassCard()` call sites across the app automatically use the clearer, higher-contrast card style.
+
+Files modified:
+	•	TrainState/Views/Components/LiquidGlass.swift
+
+✅ Result
+
+The preferred card look is now the global default for all glass-styled cards without requiring per-view overrides.
+
+⸻
+
+🗓 2026-02-16 · 13:45 (GMT+2)
+
+🔹 Request
+
+User reported a Swift compiler type-check timeout error in `WorkoutListView`.
+
+🔧 Changes Made
+	•	Refactored the main background expression in `WorkoutListView` into explicit computed properties:
+	•	`mainBackgroundColor`
+	•	`mainBackgroundAccent`
+	•	Replaced inline conditional color/gradient construction in `body` with these distinct sub-expressions to reduce compiler inference complexity.
+
+Files modified:
+	•	TrainState/Views/WorkoutListView.swift
+
+✅ Result
+
+`WorkoutListView` background composition is now simpler for the compiler to type-check and easier to maintain.
+
+⸻
+
+🗓 2026-02-16 · 13:40 (GMT+2)
+
+🔹 Request
+
+User reported main view still did not feel good enough after visibility adjustments.
+
+🔧 Changes Made
+	•	Applied a stronger visual simplification on the main Workouts screen:
+	•	Replaced decorative main background gradient with a flatter base (`systemGroupedBackground` in light mode).
+	•	Kept only a very subtle top accent fade for depth without noise.
+	•	Increased elevated card separation in shared glass styling:
+	•	Light mode elevated cards now use higher-opacity white fills.
+	•	Elevated card borders in light mode now use subtle dark strokes (instead of bright white) for clearer edge definition.
+	•	Retained elevated shadow behavior to preserve depth hierarchy on the main list.
+
+Files modified:
+	•	TrainState/Views/WorkoutListView.swift
+	•	TrainState/Views/Components/LiquidGlass.swift
+
+✅ Result
+
+The main view now has a flatter, cleaner canvas with stronger card boundaries, improving readability and overall visual confidence.
+
+⸻
+
+🗓 2026-02-16 · 13:34 (GMT+2)
+
+🔹 Request
+
+User reported that cards on the main workout view were not visible enough after previous styling changes.
+
+🔧 Changes Made
+	•	Added card prominence support to shared glass styling:
+	•	Introduced `GlassCardProminence` with `regular` and `elevated` modes.
+	•	`elevated` mode increases fill opacity, border contrast, and shadow separation.
+	•	Applied `elevated` prominence only where visibility was weak on the main screen:
+	•	Workout rows in `WorkoutRowView`
+	•	Workout list helper cards in `WorkoutListView` (limits/rate/checklist cards)
+	•	Kept default `regular` styling for other screens so the app does not become visually heavy everywhere.
+
+Files modified:
+	•	TrainState/Views/Components/LiquidGlass.swift
+	•	TrainState/Views/Components/WorkoutRowView.swift
+	•	TrainState/Views/WorkoutListView.swift
+
+✅ Result
+
+Main view cards now stand out clearly against the background while preserving the cleaner non-solid look across the rest of the app.
+
+⸻
+
+🗓 2026-02-16 · 13:28 (GMT+2)
+
+🔹 Request
+
+User requested removal of the gray look on cards after the translucency update.
+
+🔧 Changes Made
+	•	Removed gray material cast from shared card surfaces.
+	•	Replaced material-based card fills with cleaner translucent white-tinted fills in:
+	•	`GlassCardModifier` (`glassCard`)
+	•	`AppCardStyle`
+	•	Adjusted card borders to brighter/cleaner white-tinted strokes for a crisper, less muddy appearance.
+	•	Updated custom exercises panel surface in `EditWorkoutView` to match the same non-gray translucent card treatment.
+
+Files modified:
+	•	TrainState/Views/Components/LiquidGlass.swift
+	•	TrainState/Theme/AppCardStyle.swift
+	•	TrainState/Views/EditWorkoutView.swift
+
+✅ Result
+
+Cards now retain translucency but no longer read as gray, giving a cleaner and lighter visual feel.
+
+⸻
+
+🗓 2026-02-16 · 13:22 (GMT+2)
+
+🔹 Request
+
+User requested reducing background heaviness and removing solid white card surfaces to improve overall feel.
+
+🔧 Changes Made
+	•	Updated shared glass card styling to avoid solid fills:
+	•	Switched `glassCard` base fill to material (`.ultraThinMaterial`) with light translucent overlay.
+	•	Reduced card shadow/border weight for a softer, less blocky appearance.
+	•	Updated shared `AppCardStyle` to use translucent material surfaces instead of solid `systemBackground` cards.
+	•	Reduced background gradient intensity in key high-traffic screens:
+	•	`WorkoutListView`
+	•	`AddWorkoutView`
+	•	`EditWorkoutView`
+	•	Flattened gradient direction to top-to-bottom for less visual motion/noise.
+	•	Converted the custom exercises panel in `EditWorkoutView` from a near-solid background to material/translucent styling for consistency.
+
+Files modified:
+	•	TrainState/Views/Components/LiquidGlass.swift
+	•	TrainState/Theme/AppCardStyle.swift
+	•	TrainState/Views/WorkoutListView.swift
+	•	TrainState/Views/AddWorkoutView.swift
+	•	TrainState/Views/EditWorkoutView.swift
+
+✅ Result
+
+The app now has flatter, calmer backgrounds and translucent card surfaces that feel less heavy than solid white blocks, improving perceived polish and comfort.
+
+⸻
+
+🗓 2026-02-16 · 13:12 (GMT+2)
+
+🔹 Request
+
+User reported they did not like the sticky action bar appearance in Add/Edit flows.
+
+🔧 Changes Made
+	•	Removed sticky bottom action bars from both Add and Edit workout screens.
+	•	Restored primary save actions to the normal in-flow form layout at the end of content.
+	•	Reduced extra bottom inset (previously reserved for sticky bar) to standard scroll spacing.
+	•	Kept the rest of the editing UX improvements intact:
+	•	`More details` progressive disclosure.
+	•	Unsaved changes confirmation on cancel.
+	•	Cleaner spacing rhythm updates.
+
+Files modified:
+	•	TrainState/Views/AddWorkoutView.swift
+	•	TrainState/Views/EditWorkoutView.swift
+
+✅ Result
+
+Add/Edit now keep a cleaner, more natural form flow without sticky action chrome, while preserving the improved editing behavior.
+
+⸻
+
+🗓 2026-02-16 · 13:08 (GMT+2)
+
+🔹 Request
+
+User requested improvements specifically for editing UX, asking to implement the cleaner Add/Edit flow updates.
+
+🔧 Changes Made
+	•	Refactored both Add and Edit workout flows to use the same interaction model:
+	•	Introduced a sticky bottom action bar with `Cancel` + primary save action on both screens.
+	•	Added unsaved-changes protection on cancel:
+	•	Add flow now prompts before dismissing when user-entered content exists.
+	•	Edit flow now computes an initial snapshot and prompts before dismissing when current state differs.
+	•	Added progressive disclosure for secondary form fields:
+	•	Created a `More details` section in both views to collapse/expand optional inputs.
+	•	Moved `Workout Rating` and `Notes` behind the advanced section by default to reduce initial form density.
+	•	Aligned top-level spacing and container rhythm in Add/Edit:
+	•	Reduced inter-card spacing and horizontal/vertical paddings for a cleaner, less bulky layout.
+	•	Increased bottom content inset to prevent overlap with sticky action bar.
+	•	Normalized card padding across Add workflow cards from `20` to `16`.
+
+Files modified:
+	•	TrainState/Views/AddWorkoutView.swift
+	•	TrainState/Views/EditWorkoutView.swift
+
+✅ Result
+
+Adding and editing workouts now feel more focused and consistent, with safer cancellation behavior and a cleaner primary form flow that keeps optional fields out of the way until needed.
+
+⸻
+
+🗓 2026-02-16 · 12:57 (GMT+2)
+
+🔹 Request
+
+User requested an enhanced version of the app with a cleaner UX, less clunky layout density, and a lighter overall feel.
+
+🔧 Changes Made
+	•	Reduced global card visual heaviness by tightening core design tokens:
+	•	Updated `ViewConstants.cardCornerRadius` from `32` to `18` for cleaner geometry.
+	•	Reduced large spacing/padding token values to lower perceived bulk.
+	•	Refined shared glass card rendering to feel less dense:
+	•	Lowered shadow strength/radius and border prominence in `GlassCardModifier`.
+	•	Simplified the main workout row (`standard` style) to improve scanability:
+	•	Smaller icon container and tighter row padding.
+	•	Consolidated top-line metadata (`Workout Type · Duration`).
+	•	Removed subcategory line from the default row layout to reduce text overload.
+	•	Softened distance badge emphasis and chevron contrast.
+	•	Cleaned up `WorkoutListView` visual rhythm:
+	•	Toned down background gradient intensity.
+	•	Reduced section/list/card spacing and top/bottom padding.
+	•	Downshifted section header typography from headline-heavy to compact semibold style.
+	•	Normalized helper card paddings (`limits`, `rate`, `first session checklist`) from `20` to `16`.
+
+Files modified:
+	•	TrainState/Theme/ViewConstants.swift
+	•	TrainState/Views/Components/LiquidGlass.swift
+	•	TrainState/Views/Components/WorkoutRowView.swift
+	•	TrainState/Views/WorkoutListView.swift
+
+✅ Result
+
+The app now presents a cleaner, calmer UI with better information hierarchy and reduced visual clutter, while preserving existing functionality and flows.
+
+⸻
+
+🗓 2026-02-16 · 20:17 (GMT+2)
+
+🔹 Request
+
+User requested Analytics screen simplification due to overload and asked for better sorting/structure.
+
+🔧 Changes Made
+	•	Restructured Analytics hierarchy to prioritize core cards at the top:
+	•	Weekly Recap
+	•	Weekly Goals
+	•	Next Session Guidance
+	•	Moved secondary/advanced analytics behind a single collapsed `Show More Insights` card.
+	•	When expanded, advanced cards are revealed (streaks, PRs, adaptive plan, untrained categories, persistent surfaces, all-time summary, strength inventory link).
+	•	Added progressive disclosure controls for heavier lists:
+	•	Adaptive Plan now supports `View All` / `Show Top 3`.
+	•	Not Trained Yet now supports `View All` / `Show Top 5`.
+
+Files modified:
+	•	TrainState/Views/AnalyticsView.swift
+
+✅ Result
+
+Analytics now has a cleaner top-level focus with reduced cognitive load, while still keeping deeper insights accessible on demand.
+
+⸻
+
 🗓 2026-02-16 · 20:08 (GMT+2)
 
 🔹 Request
